# extensionsystem

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: commondefs.cmake
examples/: CMakeLists.txt  main.cpp
include/: constants.h  extension_global.h  extensiondefs.h
include/basicvariant/: basicvariant.h
include/event/: event.h  eventdispatch.h
include/format/: basicvariant.h  formatter.h
include/json/: json.h
include/logger/: logger.h  logger.ini
include/plugin/: plugin.h  pluginloader.h  pluginmanager.h  pluginspec.h
include/plugin/private/: plugin_p.h
include/thread/: thread.h  threadpool.h
include/timer/: timermanager.h
include/utils/: extensionutils.h
src/basicvariant/: basicvariant.cpp
src/event/: event.cpp  eventdispatch.cpp
src/format/: basicvariant.cpp  formatter.cpp
src/json/: jsoncpp.cpp
src/logger/: logger.cpp
src/plugin/: plugin.cpp  pluginloader.cpp  pluginmanager.cpp  pluginspec.cpp
src/thread/: thread.cpp  threadpool.cpp
src/timer/: timermanager.cpp
src/utils/: extensionutils.cpp
